# Talk2STindex

./: .flake8  .gitignore  Dockerfile.mcp  Dockerfile.mcp.gpu  README.md  config.example.yml  config.mcp.example.yml  docker-compose.dev.mcp.gpu.yml  docker-compose.dev.mcp.yml  docker-compose.mcp.gpu.yml  docker-compose.mcp.yml  pyproject.toml  setup.sh
.github/workflows/: deploy-mcp.yml
src/talk2stindex/: __init__.py  logging.py
src/talk2stindex/core/: extraction.py  geocoder.py  json_utils.py  llm.py  prompt.py  temporal.py
src/talk2stindex/mcp/: asgi.py  cli.py  config.py  server.py
src/talk2stindex/mcp/auth/: oauth_proxy.py  oidc_client.py
src/talk2stindex/mcp/tools/: __init__.py  stindex.py
tests/: test_stindex.py
